--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,6 +66,25 @@
                           <a class="list-group-item list-group-item-action" href="#list-item-2">2. Establishment</a>
                           <a class="list-group-item list-group-item-action" href="#list-item-3">3. Objectives</a>
                           <a class="list-group-item list-group-item-action" href="#list-item-4">4. Functions</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-5">5. General powers</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-6">6. Appointment of
+                            Director</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-7">7. Removal from
+                            office</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-8">8. Acting Director</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-1">9. Proof of
+                            appointment</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-2">10. Responsibilities of
+                            Director </a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-3">12. Security screening
+                            of staff of Centre other than Director </a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-4">13. Security screening
+                            of Director of Centre</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-5">14. Funds and financial
+                            year of Centre</a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-6">15. Audit </a>
+                          <a class="list-group-item list-group-item-action" href="#list-item-7">16. Delegation </a>
+                          <!-- <a class="list-group-item list-group-item-action" href="#list-item-8">8. Acting Director</a> -->
                         </div>
                       </div>
                       <div class="col-8">
@@ -183,7 +202,6 @@
                             Act
                             and the provisions of any other law existing at the commencement of this Act, save
                             the Constitution, the provisions of this Act prevail. </p>
-
                           <h4 id="list-item-2">2. Establishment</h4>
                           <p class="paragraphs">2. Establishment
                             (1) A Financial Intelligence Centre is hereby established as an institution outside
@@ -240,6 +258,191 @@
                             despite any recommendation of the Centre made in terms of section
                             44(b).
                             [Added by s. 4 (b) of Act 11 of 2008.]</p>
+                          <h4 id="list-item-5">5. General powers</h4>
+                          <p class="paragraphs">(1) The Centre may do all that is necessary or expedient to perform its
+                            functions
+                            effectively, which includes the power to—
+                            (a) determine its own staff establishment and the terms and conditions of
+                            employment for its staff within a policy framework determined by the
+                            Minister;
+                            (b) appoint employees and seconded personnel to posts on its staff
+                            establishment;
+                            (c) obtain the services of any person by agreement, including any state
+                            department, functionary or institution, to perform any specific act or
+                            Page 11 of 257Chapter 1 FICA
+                            function;
+                            (d) acquire or dispose of any right in or to property, but rights in respect of
+                            immovable property may be acquired or disposed of only with the
+                            consent of the Minister;
+                            (e) open and operate its own bank accounts, subject to the Public Finance
+                            Management Act, 1999 (Act No. 1 of 1999);
+                            (f) insure itself against any loss, damage, risk or liability;
+                            (g) perform legal acts or institute or defend any legal action in its own
+                            name;
+                            (h) engage in any lawful activity, whether alone or together with any other
+                            organisation in the Republic or elsewhere, aimed at promoting its
+                            objectives;
+                            (i) do anything that is incidental to the exercise of any of its powers.</p>
+                          <h4 id="list-item-6">6. Appointment of Director</h4>
+                          <p class="paragraphs">(1) The Minister must appoint a fit and proper person as the Director of
+                            the
+                            Centre.
+                            (2) A person appointed as the Director holds office—
+                            (a) for a term not exceeding five years, but which is renewable; and
+                            (b) on terms and conditions set out in a written employment contract,
+                            which must include terms and conditions setting specific, measurable
+                            performance standards.
+                            (3) The Minister must consult the Council before appointing a person or renewing
+                            the appointment of a person as the Director, except in the case of the
+                            appointment of the first Director.</p>
+                          <h4 id="list-item-7">7. Removal from office</h4>
+                          <p class="paragraphs">(1) The Minister may remove the Director from office only on the grounds
+                            referred
+                            to in section 13 or on the grounds of misconduct, incapacity or incompetence.
+                            (2) The Minister may suspend the Director from office, pending—
+                            (a) the determination of any enquiry as to whether grounds of misconduct,
+                            incapacity or incompetence exist; or
+                            (b) the outcome of a security screening investigation referred to in
+                            section 13(3).
+                            Page 12 of 257Chapter 1 FICA
+                          </p>
+                          <h4 id="list-item-8">8. Acting Director</h4>
+                          <p class="paragraphs">When the Director is absent or otherwise unable to perform the functions
+                            of office, or
+                            during a vacancy in the office of Director, the Minister may designate another
+                            employee of the Centre to act as Director.</p>
+                          <h4 id="list-item-9">9. Proof of appointment</h4>
+                          <p class="paragraphs">If the Minister has given notice in the Gazette of any appointment of a
+                            person as the
+                            Director or as acting director, this notice may be presented in a Court as proof of the
+                            appointment.</p>
+                          <h4 id="list-item-10">10. Responsibilities of Director</h4>
+                          <p class="paragraphs">(1) The Director—
+                            (a) is responsible for the performance by the Centre of its functions;
+                            (b) takes all decisions of the Centre in the exercise of its powers and the
+                            performance of its functions, except those decisions taken in
+                            consequence of a delegation or instruction in terms of section 16; and
+                            (c) is the chief executive officer and also the accounting authority of the
+                            Centre.
+                            (2) As the chief executive officer, the Director is responsible for—
+                            (a) the formation and development of an efficient and performance driven
+                            administration;
+                            (b) the management of the administration; and
+                            (c) the control, and maintenance of discipline, of staff.
+                            (3) As accounting authority of the Centre the Director must perform the functions
+                            assigned to accounting authorities in terms of the Public Finance
+                            Management Act, 1999 (Act No. 1 of 1999).
+                            (4) The Director performs the functions of office subject to any policy framework
+                            which may be prescribed by the Minister. </p>
+                          <h4 id="list-item-11">11. Staff</h4>
+                          <p class="paragraphs">(1) The staff of the Centre consists of—
+                            (a) the Director; and
+                            (b) persons appointed as employees of the Centre by the Director.
+                            (2) An employee of an organ of state may be seconded to the Centre by
+                            Page 13 of 257Chapter 1 FICA
+                            agreement between the Centre and such organ of state.
+                            (3) Staff members referred to in subsection (1)(b) and persons seconded to the
+                            Centre in terms of subsection (2) perform their duties subject to the control
+                            and directions of the Director.
+                            (4) If an officer or employee in the public service is seconded to the Centre, the
+                            period of his or her service with the Centre must be calculated as part of and
+                            continuous with his or her employment in the public service, for purposes of
+                            leave, pension and any other condition of service.
+                            (5) The provisions of any pension law applicable to an officer or employee
+                            referred to in subsection (4) or, in the event of his or her death, to his or her
+                            dependants, which are not inconsistent with this section, must, with the
+                            necessary changes, continue so to apply.
+                            (6) No person seconded to the Centre or employed by the Centre to perform any
+                            of the functions of the Centre may strike or induce or conspire with any other
+                            member of the staff of the Centre to strike.
+                            (7) The services of the Centre, for the purposes of the application of Chapter IV
+                            of the Labour Relations Act, 1995 (Act No. 66 of 1995), are deemed to have
+                            been designated as an essential service in terms of section 71 of that Act.
+                            (8) All other conditions of service of staff of the Centre are as determined in terms
+                            of this Act. </p>
+                          <h4 id="list-item-12">12. Security screening of staff of Centre other than Director</h4>
+                          <p class="paragraphs">(1) No person other than the Director may be appointed or seconded to
+                            perform
+                            any of the functions of the Centre unless—
+                            (a) information with respect to that person has been gathered in a security
+                            screening investigation by the National Intelligence Agency established
+                            by section 3 of the Intelligence Services Act, 1994 (Act No. 38 of 1994);
+                            and
+                            (b) the Director, after evaluating the gathered information, is satisfied that
+                            such person may be so appointed without the possibility that such
+                            person might be a security risk or that he or she might act in any way
+                            prejudicial to the objectives or functions of the Centre.
+                            (2) If the Director is so satisfied, the Director must issue a certificate with respect
+                            to such person in which it is certified that such person has successfully
+                            Page 14 of 257Chapter 1 FICA
+                            undergone a security clearance.
+                            (3) Any person referred to in subsection (1) may at any time determined by the
+                            Director be subjected to a further security screening investigation as
+                            contemplated in subsection (1)(a).
+                            (4) The Director may withdraw a certificate referred to in subsection (2) if the
+                            Director obtains information from an investigation referred to in subsection (3)
+                            which, after evaluation by the Director, causes the Director to believe that the
+                            person in question could be a security risk or could possibly act in any manner
+                            prejudicial to the objectives or functions of the Centre.
+                            (5) If the certificate referred to in subsection (2) is withdrawn, the person
+                            concerned may not perform any functions of the Centre and the Director must
+                            discharge him or her from the Centre. </p>
+                          <h4 id="list-item-13">13. Security screening of Director of Centre</h4>
+                          <p class="paragraphs">(1) No person may be appointed as the Director of the Centre unless—
+                            (a) information with respect to that person has been gathered in a security
+                            screening investigation by the National Intelligence Agency established
+                            by section 3 of the Intelligence Services Act, 1994 (Act No. 38 of 1994);
+                            and
+                            (b) the Minister, after evaluating the gathered information, is satisfied that
+                            such person may be so appointed without the possibility that such
+                            person might be a security risk or that he or she might act in any
+                            manner prejudicial to the objectives or functions of the Centre.
+                            (2) If the Minister is so satisfied, he or she must issue a certificate with respect to
+                            such person in which it is certified that such person has successfully
+                            undergone a security clearance.
+                            (3) The Director may at any time determined by the Minister be subjected to a
+                            further security screening investigation as contemplated in subsection (1) (a).
+                            (4) The Minister may withdraw a certificate referred to in subsection (2) if the
+                            Minister obtains information from an investigation referred to in subsection (3)
+                            which, after evaluation by the Minister, causes the Minister to believe that the
+                            Director could be a security risk or could possibly act in any manner
+                            prejudicial to the objectives or functions of the Centre.
+                            (5) If the certificate referred to in subsection (2) is withdrawn, the Director may
+                            not perform any functions of the Centre and the Minister must discharge him
+                            or her from the Centre.</p>
+                          <h4 id="list-item-14">14. Funds and financial year of Centre</h4>
+                          <p class="paragraphs">(1) The funds of the Centre consist of—
+                            (a) money appropriated annually by Parliament for the purposes of the
+                            Centre;
+                            (b) any government grants made to it; and
+                            (c) any other money legally acquired by it, provided that the Centre may
+                            accept donations only with the prior written approval of the Minister.
+                            (2) The financial year of the Centre ends on 31 March in each year. </p>
+                          <h4 id="list-item-15">15. Audit</h4>
+                          <p class="paragraphs">The Auditor-General must audit and report on the accounts and financial
+                            records of
+                            the Centre.</p>
+                          <h4 id="list-item-16">16. Delegation</h4>
+                          <p class="paragraphs">(1) The Director may—
+                            (a) delegate, in writing, any of the powers entrusted to the Centre in terms
+                            of this Act to a member of the staff of the Centre; or
+                            (b) instruct a member of the staff to perform any of the functions assigned
+                            to the Centre in terms of this Act.
+                            (2) A delegation or instruction in terms of subsection (1)—
+                            (a) is subject to the limitations or conditions that the Director may impose;
+                            and
+                            (b) does not divest the Director of the responsibility concerning the
+                            exercise of the delegated power or the performance of the assigned
+                            function.
+                            (3) The Director may confirm, vary or revoke any decision taken by a staff
+                            member in consequence of a delegation or instruction in terms of
+                            subsection (1), as long as no such variation or revocation of a decision
+                            detracts from any rights that may have accrued as a result of the decision.
+                            (4) A person seconded to the Centre in terms of section 11(2) is for the purposes
+                            of this section regarded as being a staff member.
+                          </p>
+                          <!-- <h4 id="simple-list-item-5">Item 5</h4>
+                            <p>...</p> -->
                         </div>
                       </div>
                     </div>
