--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,42 @@
 {% include "header.html" %}
+<div class="container-fluid header-container">
+  <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start navbar-head">
+          {% if current_user.is_authenticated: %}
+          <a class="navbar-brand text-white fs-1 logo-text pt-0" href="#">TLL</a>
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+              <!-- <li><a href="#" class="nav-link px-4 text-white">Home</a></li> -->
+              <div class="dropdown px-4">
+                  <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      Legislation
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-outline-dark">
+                      <li><a class="dropdown-item" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                              aria-controls="offcanvasExample">{{laws[0].name}}</a></li>
+                      <li><a class="dropdown-item" href="#">{{laws[1].name}}</a></li>
+                      <li><a class="dropdown-item" href="#">{{laws[2].name}}</a></li>
+                      <li><a class="dropdown-item" href="#">{{laws[3].name}}</a></li>
+                  </ul>
+              </div>
+          </ul>
+          {% endif %}
+          <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+              <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+                  aria-label="Search">
+          </form> -->
+
+          <div class="text-end">
+              {% if current_user.is_authenticated: %}
+              <a href="{{url_for('logout')}}" type="button" class="btn btn-outline-light">Logout</a>
+              {% endif %}
+              {% if not current_user.is_authenticated: %}
+              <a href="{{url_for('login')}}" type="button" class="btn btn-outline-light">Login</a>
+              {% endif %}
+          </div>
+      </div>
+  </div>
+</div>
 
 <div class="container-fluid registration-page">
   <div class="container">
