Adding Cisca Act

--- a/templates/index.html
+++ b/templates/index.html
@@ -4094,6 +4094,7 @@
               <a class="list-group-item list-group-item-action  section-titles" href="#FAIS-item-1B">1B.
                 Regulatory
                 instruments</a>
+              <h6 class="chapter-title">CHAPTER 1<br>ADMINISTRATION OF ACT</h6>
               <a class="list-group-item list-group-item-action  section-titles" href="#FAIS-item-2">2.
                 ……….</a>
               <a class="list-group-item list-group-item-action  section-titles" href="#FAIS-item-3">3.
@@ -4109,6 +4110,7 @@
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-6A">6A.
                 Fit and proper
                 requirements</a>
+              <h6 class="chapter-title">CHAPTER 2<br>AUTHORISATION OF FINANCIAL SERVICES PROVIDERS</h6>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-7">7.
                 Authorisation of
                 financial services providers</a>
@@ -4129,6 +4131,7 @@
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-12">12.
                 Exemptions in
                 respect of product suppliers</a>
+              <h6 class="chapter-title">CHAPTER<br>REPRESENTATIVES OF AUTHORISED FINANCIAL SERVICES  PROVIDERS</h6>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-13">13.
                 Qualifications of
                 representatives and duties of authorised financial services providers</a>
@@ -4137,12 +4140,14 @@
                 representatives</a>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-14A">14A.
                 ……….</a>
+              <h6 class="chapter-title">CHAPTER 4<br>CODES OF CONDUCT</h6>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-15">15.
                 Publication of
                 codes of conduct</a>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-16">16.
                 Principles of
                 code of conduct</a>
+              <h6 class="chapter-title">CHAPTER 5<br>DUTIES OF AUTHORISED FINANCIAL SERVICES PROVIDERS</h6>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-17">17.
                 Compliance
                 officers and compliance arrangements</a>
@@ -4152,6 +4157,7 @@
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-19">19.
                 Accounting and
                 audit requirements</a>
+              <h6 class="chapter-title">CHAPTER 6<br>ENFORCEMENT</h6>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-20">20.Office of Ombud
                 for Financial Services Providers</a>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-20A">20A.
@@ -4215,6 +4221,7 @@
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-39">39.
                 Right to
                 reconsideration of decision</a>
+              <h6 class="chapter-title">CHAPTER 6<br>MISCELLANEOUS</h6>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-40">40.
                 Saving of
                 rights</a>
@@ -4233,6 +4240,7 @@
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-46">46.
                 Commencement and
                 short title</a>
+              <h6 class="chapter-title">SCHEDULE<br>LAWS AMENDED OR REPEALED</h6>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-47">LAWS
                 AMENDED OR REPEALED</a>
               <a class="list-group-item list-group-item-action section-titles" href="#FAIS-item-48">SCHEDULE</a>
@@ -7985,8 +7993,6 @@
               <h4 id="FAIS-item-47">LAWS AMENDED OR REPEALED<a class="btn btn-link-secondary" href="#FAIS-item-1"
                   role="button">Back to Top</a></h4>
               <p class="paragraphs">(Section 45) <br>
-
-
                 I Act No. 97 of 1990
                 Financia l Services Board Act, 1990
                 The amendment of section 1 by the addition of
