Adding insurance Act

--- a/templates/header.html
+++ b/templates/header.html
@@ -139,7 +139,7 @@
               <li><a class="dropdown-item" href="{{ url_for('fica') }}" role="button">The Financial Intelligence Centre Act, 2001</a></li>
               <li><a class="dropdown-item" href="{{ url_for('fais') }}" role="button">Financial Advisory and Intermediary Services Act, 2002</a></li>
               <li><a class="dropdown-item" href="{{url_for('cisca')}}" role="button">Collective Investment Schemes Control Act, 2002</a></li>
-              <li><a class="dropdown-item" href="#">Insurance Act NO.18 OF 2017</a></li>
+              <li><a class="dropdown-item" href="{{url_for('insurance_act')}}">Insurance Act NO.18 OF 2017</a></li>
             </ul>
           </div>
         </ul>
