--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <div class="container w-75 intro">
     <main class="px-3">
       <h1 class="intro-header">Welcome to The Legislative Library</h1>
-      <p class="lead intro-body">A website created for compliance and law professionals.
+      <p class="lead intro-body">We created this website to make it easier to read and understand legislation.
         On this site, you'll find actual legislation as well as simplified summaries in plain language for each
         section.
         We hope you find this site helpful and easy to use!</p>
@@ -16,13 +16,13 @@
           Learn More:
         </button>
         <div class="dropdown-menu p-4 about-us" style="max-width: 1400px;">
-          <p class="about-us">We created this website to make it easier for compliance and law professionals
-            to read and understand legislation. We believe that by providing a simplified summary of each
-            section, professionals will be able to more easily and quickly digest the information and
-            communicate it to others. We hope that this website will help make the law more accessible to
-            everyone. On this website, you can click on the legislation button, find the
-            legislation you are looking for, and it will be laid out in a simple and easy-to-understand
-            format.</p>
+          <p class="about-us">We created this website to make it easier to read and understand legislation. 
+            In order to understand things better it sometimes helps to read a summary. So, we have added a 
+            plain language summary to each section. We hope that this will help you be able to more easily and 
+            quickly digest the information and have a good start for communicating it to others. All you have 
+            to do is click on the legislation button, select the legislation you are looking for, and you will 
+            be directed to the page with the piece of legislation you selected. <br><br><b>Please note: the summary is not 
+            meant to replace the law; the laws must always take precedence.</b></p>
         </div>
       </div>
       <!-- <p class="lead">
