--- a/templates/header.html
+++ b/templates/header.html
@@ -126,8 +126,8 @@
     <div class="container">
       <div
         class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start navbar-head sticky-top">
-        {% if current_user.is_authenticated: %}
         <a class="navbar-brand text-white fs-1 logo-text pt-0" href="{{ url_for('home') }}">TLL</a>
+        {% if current_user.is_authenticated: %}
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <!-- <li><a href="#" class="nav-link px-4 text-white">Home</a></li> -->
           <div class="dropdown px-4">
@@ -154,7 +154,8 @@
           <a href="{{url_for('logout')}}" type="button" class="btn btn-outline-light">Logout</a>
           {% endif %}
           {% if not current_user.is_authenticated: %}
-          <a href="{{url_for('register')}}" type="button" class="btn btn-dark">Sign-up</a>
+          <a href="{{url_for('register')}}" type="button" class="btn btn-outline-light">Sign-up</a>
+          <a href="{{url_for('login')}}" type="button" class="btn btn-outline-light">Login</a>
           {% endif %}
         </div>
       </div>
