--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,11 @@
 {% include "header.html" %}
-<div class="container-fluid header-container">
+<!-- <div class="container-fluid header-container">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start navbar-head">
             {% if current_user.is_authenticated: %}
             <a class="navbar-brand text-white fs-1 logo-text pt-0" href="#">TLL</a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <!-- <li><a href="#" class="nav-link px-4 text-white">Home</a></li> -->
+                 <li><a href="#" class="nav-link px-4 text-white">Home</a></li> 
                 <div class="dropdown px-4">
                     <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
@@ -21,10 +21,10 @@
                 </div>
             </ul>
             {% endif %}
-            <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                 <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
                     aria-label="Search">
-            </form> -->
+            </form>
 
             <div class="text-end">
                 {% if current_user.is_authenticated: %}
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>  -->
 
 <div class="container-fluid login-page">
 <main class="form-signin w-25 m-auto">
