--- a/templates/fica.html
+++ b/templates/fica.html
@@ -11,6 +11,9 @@
         laundering purposes and the financing of terrorist and related activities.</p>
       <a class="btn btn-outline-light" data-bs-toggle="offcanvas" href="#offcanvas" role="button"
         aria-controls="offcanvasExample"><b>FICA</b></a>
+      <!-- <p class="lead">
+                <a href="#" class="btn btn-secondary fw-bold">Learn more</a>
+            </p> -->
     </main>
   </div>
 </div>
