--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
             meant to replace the law; the laws must always take precedence.</b></p>
         </div>
       </div>
+      <!-- <p class="lead">
+                <a href="#" class="btn btn-secondary fw-bold">Learn more</a>
+            </p> -->
     </main>
   </div>
 </div>
