--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-0 pt-0 pb-0 sticky-bottom">
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-0 pt-0 pb-0">
 
   <div class="container-fluid footer">
     <div class="col-md-4 pt-4 pb-4 container footer">
