--- a/templates/header.html
+++ b/templates/header.html
@@ -121,7 +121,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: #0C151C;">
   <div class="container-fluid header-container">
     <div class="container">
       <div
